syntax = "proto3";

package exchange.events.v1;

option java_multiple_files = true;
option java_package = "com.exchange.common.grpc.events.v1";

message OrderCreated {
  string order_id = 1;
  int64 user_id = 2;
  int64 trading_pair_id = 3;
  string client_order_id = 4;
  string side = 5;
  string type = 6;
  string price = 7;
  string quantity = 8;
  string status = 9;
  string created_at = 10;
}

message TradeExecuted {
  string trade_id = 1;
  int64 trading_pair_id = 2;
  string buy_order_id = 3;
  string sell_order_id = 4;
  int64 buyer_id = 5;
  int64 seller_id = 6;
  string maker_order_id = 7;
  string taker_order_id = 8;
  string price = 9;
  string quantity = 10;
  string executed_at = 11;
}

message OutboxEvent {
  string event_id = 1;
  string event_type = 2;
  string aggregate_type = 3;
  string aggregate_id = 4;
  string occurred_at = 5;
  oneof payload {
    OrderCreated order_created = 10;
    TradeExecuted trade_executed = 11;
  }
}
